style: update global layout to prevent overflow

--- a/src/layouts/globals.scss
+++ b/src/layouts/globals.scss
@@ -49,7 +49,8 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  max-height: 100vh;
+  overflow: hidden;
   display: flex;
   flex-direction: row;
   width: 100vw;
